# django-email-auth-backend

./: .gitguardian.yml  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pytest.yml  release-build-and-publish.yml
django_email_auth/: urls.py  views.py
