[tool.poetry]
name = "django-email-auth-backend"
version = "1.0.0"
description = "Django app supporting email-based authentication."
authors = ["David Nugent <davidn@uniquode.io>"]
readme = "README.md"
packages = [
    { include = "django_email_auth", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
