[project]
name = "django-email-auth-backend"
version = "1.1.0"
description = "Django app supporting email-based authentication."
authors = [{name = "David Nugent", email = "davidn@uniquode.io"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "django >=3.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]

[dependency-groups]
dev = [
   "pytest >= 8.2",
   "pytest-django >= 4.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_email_auth"]

